@@ -184,7 +184,7 @@ public class ResourceToItemsMapper {
 	private static IResource getCorrespondingResource(Object element) {
 		if (element instanceof ICElement) {
 			ICElement elem= (ICElement) element;
-			if (!elem.isReadOnly()) { // only modifieable elements can get error ticks
+//			if (!elem.isReadROnly()) { // only modifieable elements can get error ticks
 				IResource res= elem.getResource();
 				if (res == null) {
 					ITranslationUnit cu= (ITranslationUnit) elem.getAncestor(ICElement.C_UNIT);
@@ -194,8 +194,8 @@ public class ResourceToItemsMapper {
 					}
 				}
 				return res; 
-			}
-			return null;
+//			}
+//			return null;
 		} else if (element instanceof IResource) {
 			return (IResource) element;
 		}
